# farseer

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: alembic.ini  pyproject.toml
backend/data/: csi300.json  csi500.json  fetch_progress.json  indices.json  universe_ever_seen.json
backend/migrations/: env.py
backend/migrations/versions/: 0bb39e3c5f1d_add_unique_indexes_for_upsert.py  635b211e3001_initial_tables.py  a472476141c8_flexible_fundamentals_with_jsonb_data.py  b4cf71c1fb0a_simplify_to_single_adjustor_factor.py  eee7ba5183d8_rename_adjustor_factor_to_backward_.py  f4b1c23b698e_ohlc_adjustments_and_flexible_data.py
backend/src/farseer/: config.py  database.py  datasource.py  main.py  universe.py
backend/src/farseer/api/: deps.py
backend/src/farseer/assets/: etf_top100.json  indices.json
backend/src/farseer/data/: ohlc.py
backend/src/farseer/fetchers/: __init__.py  base.py  example.py  registry.py
backend/src/farseer/jobs/: daily.py  runner.py
backend/src/farseer/models/: __init__.py  base.py  fundamentals.py  macro.py  ohlc.py  task.py  trading_game.py  user.py
backend/src/farseer/scheduler/: fetch_jobs.py  jobs.py  runner.py
backend/src/farseer/schemas/: __init__.py  fundamentals.py  macro.py  ohlc.py  task.py
backend/src/farseer/services/: auth.py  fundamentals.py  macro.py  ohlc.py
backend/src/farseer/sources/: __init__.py  akshare_fetcher.py  baostock_fetcher.py  base.py  fundamentals_fetcher.py  registry.py  tushare_fetcher.py  yfinance_fetcher.py
backend/src/farseer/symbols/: __init__.py  (+3 more)
backend/tests/: conftest.py
(+100 files in other folders)
