[project]
name = "farseer"
version = "0.1.0"
description = "Market data server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.4",
    "httpx>=0.26.0",
    "tushare",
    "baostock>=0.9.2",
    "akshare>=1.18.64",
    "yfinance>=1.4.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.32",
    "bcrypt==4.0.1",
    "duckdb>=1.5.4",
    "chinese-calendar>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/farseer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
